sample/ap01/src/wat/parser.js
export const Peg = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { module: peg$parsemodule },
        peg$startRuleFunction  = peg$parsemodule,

        peg$c0 = "(",
        peg$c1 = peg$literalExpectation("(", false),
        peg$c2 = "module",
        peg$c3 = peg$literalExpectation("module", false),
        peg$c4 = ")",
        peg$c5 = peg$literalExpectation(")", false),
        peg$c6 = function(id, fields) {
            return {
              node:"module",
              id:id,
              fields:fields
            }
          },
        peg$c7 = "func",
        peg$c8 = peg$literalExpectation("func", false),
        peg$c9 = function(id, type, locals, instrs) {
            return {
              node:"funcsec",
              id:id,
              type:type,
              locals:locals,
              instrs:instrs
            }
          },
        peg$c10 = "export",
        peg$c11 = peg$literalExpectation("export", false),
        peg$c12 = function(id, name, type, locals, instrs) {
            return {
              node:"funcsec",
              export:name,
              id:id,
              type:type,
              locals:locals,
              instrs:instrs
            }
          },
        peg$c13 = "type",
        peg$c14 = peg$literalExpectation("type", false),
        peg$c15 = function(idx, params, result) {
            return {
              node:"functype",
              index:idx,
              params:params,
              result:result
            }
          },
        peg$c16 = function(params, result) {
            return {
              node:"functype",
              params:params,
              result:result
            }
          },
        peg$c17 = "param",
        peg$c18 = peg$literalExpectation("param", false),
        peg$c19 = function(id, type) {
            return {
              id:id,
              type:type
            }
          },
        peg$c20 = "result",
        peg$c21 = peg$literalExpectation("result", false),
        peg$c22 = function(type) {
            return {
              type:type
            }
          },
        peg$c23 = "i32",
        peg$c24 = peg$literalExpectation("i32", false),
        peg$c25 = "i64",
        peg$c26 = peg$literalExpectation("i64", false),
        peg$c27 = "f32",
        peg$c28 = peg$literalExpectation("f32", false),
        peg$c29 = "f64",
        peg$c30 = peg$literalExpectation("f64", false),
        peg$c31 = "funcref",
        peg$c32 = peg$literalExpectation("funcref", false),
        peg$c33 = "externref",
        peg$c34 = peg$literalExpectation("externref", false),
        peg$c35 = "local",
        peg$c36 = peg$literalExpectation("local", false),
        peg$c37 = function(id, type) {
            return {
              node:"local",
              id:id,
              type:type
            }
          },
        peg$c38 = function(instr) {
            return instr
          },
        peg$c39 = "br",
        peg$c40 = peg$literalExpectation("br", false),
        peg$c41 = function(idx) {
            return {
              node:"instruction",
              kind:"br",
              index:idx
            }
          },
        peg$c42 = "br_if",
        peg$c43 = peg$literalExpectation("br_if", false),
        peg$c44 = function(idx, instr) {
            return {
              node:"instruction",
              kind:"br_if",
              index:idx,
              instr:instr
            }
          },
        peg$c45 = "call",
        peg$c46 = peg$literalExpectation("call", false),
        peg$c47 = function(idx, instrs) {
            return {
              node:"instruction",
              kind:"call",
              index:idx,
              instrs:instrs
            }
          },
        peg$c48 = "local.get",
        peg$c49 = peg$literalExpectation("local.get", false),
        peg$c50 = function(idx, instr) {
            return {
              node:"instruction",
              kind:"local.get",
              index:idx,
              instr:instr

            }
          },
        peg$c51 = "local.set",
        peg$c52 = peg$literalExpectation("local.set", false),
        peg$c53 = function(idx, instr) {
            return {
              node:"instruction",
              kind:"local.set",
              index:idx,
              instr:instr

            }
          },
        peg$c54 = "i32.const",
        peg$c55 = peg$literalExpectation("i32.const", false),
        peg$c56 = function(num) {
            return {
              node:"instruction",
              kind:"i32.const",
              value:num
            }
          },
        peg$c57 = "i32.add",
        peg$c58 = peg$literalExpectation("i32.add", false),
        peg$c59 = function(instrs) {
            return {
              node:"instruction",
              kind:"i32.add",
              instrs:instrs
            }
          },
        peg$c60 = "i32.rem_s",
        peg$c61 = peg$literalExpectation("i32.rem_s", false),
        peg$c62 = function(instrs) {
            return {
              node:"instruction",
              kind:"i32.rem_s",
              instrs:instrs
            }
          },
        peg$c63 = "i32.eqz",
        peg$c64 = peg$literalExpectation("i32.eqz", false),
        peg$c65 = function(instrs) {
            return {
              node:"instruction",
              kind:"i32.eqz",
              instrs:instrs
            }
          },
        peg$c66 = "i32.lt_s",
        peg$c67 = peg$literalExpectation("i32.lt_s", false),
        peg$c68 = function(instrs) {
            return {
              node:"instruction",
              kind:"i32.lt_s",
              instrs:instrs
            }
          },
        peg$c69 = "i32.ge_s",
        peg$c70 = peg$literalExpectation("i32.ge_s", false),
        peg$c71 = function(instrs) {
            return {
              node:"instruction",
              kind:"i32.ge_s",
              instrs:instrs
            }
          },
        peg$c72 = "block",
        peg$c73 = peg$literalExpectation("block", false),
        peg$c74 = "end",
        peg$c75 = peg$literalExpectation("end", false),
        peg$c76 = function(label, type, instrs, id) {
            return {
              node:"instruction",
              kind:"block",
              label:label,
              type:type,
              instrs:instrs,
              id:id
            }
          },
        peg$c77 = "loop",
        peg$c78 = peg$literalExpectation("loop", false),
        peg$c79 = function(label, type, instrs, id) {
            return {
              node:"instruction",
              kind:"loop",
              label:label,
              type:type,
              instrs:instrs,
              id:id
            }
          },
        peg$c80 = "if",
        peg$c81 = peg$literalExpectation("if", false),
        peg$c82 = "else",
        peg$c83 = peg$literalExpectation("else", false),
        peg$c84 = function(label, type, then_instrs, then_id, else_instrs, else_id) {
            return {
              node:"instruction",
              kind:"if",
              label:label,
              type:type,
              then_instrs:then_instrs,
              then_id:then_id,
              else_instrs:else_instrs,
              else_id:else_id
            }
          },
        peg$c85 = function(label, type, then_instrs, then_id) {
            return {
              node:"instruction",
              kind:"if",
              label:label,
              type:type,
              then_instrs:then_instrs,
              then_id:then_id
            }
          },
        peg$c86 = function(label, type, instrs) {
            return {
              node:"instruction",
              kind:"block",
              label:label,
              type:type,
              instrs:instrs
            }
          },
        peg$c87 = function(label, type, instrs) {
            return {
              node:"instruction",
              kind:"loop",
              label:label,
              type:type,
              instrs:instrs
            }

          },
        peg$c88 = "then",
        peg$c89 = peg$literalExpectation("then", false),
        peg$c90 = function(label, type, folded_instrs, then_instrs) {
            return {
              node:"instruction",
              kind:"if",
              label:label,
              type:type,
              folded_instrs:folded_instrs,
              then_instrs:then_instrs,
              else_instrs:else_instrs
            }
          },
        peg$c91 = function(name, desc) {
            return {
              node:"exportsec",
              name:name,
              desc:desc
            }
          },
        peg$c92 = function(idx) {
            return {
              node:"exportdesc",
              type:"func",
              index:idx
            }
          },
        peg$c93 = "\"",
        peg$c94 = peg$literalExpectation("\"", false),
        peg$c95 = /^[ 0-9a-zA-Z]/,
        peg$c96 = peg$classExpectation([" ", ["0", "9"], ["a", "z"], ["A", "Z"]], false, false),
        peg$c97 = function(name) {
            return name.join("")
          },
        peg$c98 = /^[+\-]/,
        peg$c99 = peg$classExpectation(["+", "-"], false, false),
        peg$c100 = /^[0-9]/,
        peg$c101 = peg$classExpectation([["0", "9"]], false, false),
        peg$c102 = function(sign, num) {
            //return parseInt(`${sign}${num.join("")}`, 10)
            return `${sign}${num.join("")}`
          },
        peg$c103 = function(num) {
            //return parseInt(num.join(""), 10)
            return num.join("")
          },
        peg$c104 = "$",
        peg$c105 = peg$literalExpectation("$", false),
        peg$c106 = /^[0-9a-zA-Z]/,
        peg$c107 = peg$classExpectation([["0", "9"], ["a", "z"], ["A", "Z"]], false, false),
        peg$c108 = function(name) {
            return `$${name.join("")}`
          },
        peg$c109 = peg$otherExpectation("whitespace"),
        peg$c110 = /^[ \t\n\r]/,
        peg$c111 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsemodule() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 40) {
          s2 = peg$c0;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 6) === peg$c2) {
              s4 = peg$c2;
              peg$currPos += 6;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseid();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    s8 = [];
                    s9 = peg$parsemodulefield();
                    while (s9 !== peg$FAILED) {
                      s8.push(s9);
                      s9 = peg$parsemodulefield();
                    }
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parse_();
                      if (s9 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 41) {
                          s10 = peg$c4;
                          peg$currPos++;
                        } else {
                          s10 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c5); }
                        }
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parse_();
                          if (s11 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c6(s6, s8);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsemodulefield() {
      var s0;

      s0 = peg$parsefunc();
      if (s0 === peg$FAILED) {
        s0 = peg$parseexport();
      }

      return s0;
    }

    function peg$parsefunc() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17, s18, s19, s20, s21, s22;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 40) {
          s2 = peg$c0;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 4) === peg$c7) {
              s4 = peg$c7;
              peg$currPos += 4;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c8); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseid();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsetypeuse();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parse_();
                      if (s9 !== peg$FAILED) {
                        s10 = [];
                        s11 = peg$parselocal();
                        while (s11 !== peg$FAILED) {
                          s10.push(s11);
                          s11 = peg$parselocal();
                        }
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parse_();
                          if (s11 !== peg$FAILED) {
                            s12 = [];
                            s13 = peg$parseinstr();
                            while (s13 !== peg$FAILED) {
                              s12.push(s13);
                              s13 = peg$parseinstr();
                            }
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parse_();
                              if (s13 !== peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 41) {
                                  s14 = peg$c4;
                                  peg$currPos++;
                                } else {
                                  s14 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                }
                                if (s14 !== peg$FAILED) {
                                  peg$savedPos = s0;
                                  s1 = peg$c9(s6, s8, s10, s12);
                                  s0 = s1;
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 40) {
            s2 = peg$c0;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c1); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            if (s3 !== peg$FAILED) {
              if (input.substr(peg$currPos, 4) === peg$c7) {
                s4 = peg$c7;
                peg$currPos += 4;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c8); }
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parse_();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parseid();
                  if (s6 === peg$FAILED) {
                    s6 = null;
                  }
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parse_();
                    if (s7 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 40) {
                        s8 = peg$c0;
                        peg$currPos++;
                      } else {
                        s8 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c1); }
                      }
                      if (s8 !== peg$FAILED) {
                        s9 = peg$parse_();
                        if (s9 !== peg$FAILED) {
                          if (input.substr(peg$currPos, 6) === peg$c10) {
                            s10 = peg$c10;
                            peg$currPos += 6;
                          } else {
                            s10 = peg$FAILED;
                            if (peg$silentFails === 0) { peg$fail(peg$c11); }
                          }
                          if (s10 !== peg$FAILED) {
                            s11 = peg$parse_();
                            if (s11 !== peg$FAILED) {
                              s12 = peg$parsename();
                              if (s12 !== peg$FAILED) {
                                s13 = peg$parse_();
                                if (s13 !== peg$FAILED) {
                                  if (input.charCodeAt(peg$currPos) === 41) {
                                    s14 = peg$c4;
                                    peg$currPos++;
                                  } else {
                                    s14 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                  }
                                  if (s14 !== peg$FAILED) {
                                    s15 = peg$parse_();
                                    if (s15 !== peg$FAILED) {
                                      s16 = peg$parsetypeuse();
                                      if (s16 !== peg$FAILED) {
                                        s17 = peg$parse_();
                                        if (s17 !== peg$FAILED) {
                                          s18 = [];
                                          s19 = peg$parselocal();
                                          while (s19 !== peg$FAILED) {
                                            s18.push(s19);
                                            s19 = peg$parselocal();
                                          }
                                          if (s18 !== peg$FAILED) {
                                            s19 = peg$parse_();
                                            if (s19 !== peg$FAILED) {
                                              s20 = [];
                                              s21 = peg$parseinstr();
                                              while (s21 !== peg$FAILED) {
                                                s20.push(s21);
                                                s21 = peg$parseinstr();
                                              }
                                              if (s20 !== peg$FAILED) {
                                                s21 = peg$parse_();
                                                if (s21 !== peg$FAILED) {
                                                  if (input.charCodeAt(peg$currPos) === 41) {
                                                    s22 = peg$c4;
                                                    peg$currPos++;
                                                  } else {
                                                    s22 = peg$FAILED;
                                                    if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                                  }
                                                  if (s22 !== peg$FAILED) {
                                                    peg$savedPos = s0;
                                                    s1 = peg$c12(s6, s12, s16, s18, s20);
                                                    s0 = s1;
                                                  } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                  }
                                                } else {
                                                  peg$currPos = s0;
                                                  s0 = peg$FAILED;
                                                }
                                              } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                              }
                                            } else {
                                              peg$currPos = s0;
                                              s0 = peg$FAILED;
                                            }
                                          } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                          }
                                        } else {
                                          peg$currPos = s0;
                                          s0 = peg$FAILED;
                                        }
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parsetypeuse() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
